# django-paranoid-model

./: .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  merge_mds.py  mkdocs.yml  requirements.txt  runtests.py  setup.cfg  setup.py
ci/: send_coverage_report.sh
config/: settings.py
docs/: 01_initial.md  02_get_started.md  03_create_your_paranoid_model.md  04_instance_manipulate.md  05_making_queries.md  06_django_admin.md  404.html  django_admin.md  index.html  index.md  instance_manipulate.md  making_queries.md  search.html  sitemap.xml
docs/01_initial/: index.html
docs/02_get_started/: index.html
docs/03_create_your_paranoid_model/: index.html
docs/04_instance_manipulate/: index.html
docs/05_making_queries/: index.html
docs/06_django_admin/: index.html
docs/create_your_paranoid_model/: index.html
docs/django_admin/: index.html
docs/get_started/: index.html
docs/instance_manipulate/: index.html
docs/making_queries/: index.html
docs/search/: search_index.json
mkdocs/: mkdocs.yml  requirements.txt
mkdocs/docs/: create_your_paranoid_model.md  django_admin.md  get_started.md  index.md  instance_manipulate.md  making_queries.md
paranoid_model/: admin.py  apps.py  exceptions.py  manager.py  models.py  paranoid_model.py  queryset.py  shortcuts.py
paranoid_model/test/: models.py  test_related_model.py  test_settings.py  test_singles_model.py  utils.py
paranoid_model/tests/: models.py  test_admin.py  test_one_to_one_field.py  test_related_model.py  test_settings.py  test_shortcuts.py  test_singles_model.py  utils.py  (+1 more)
(+1 files in other folders)
