[metadata]
description-file = README.md

[tool:pytest]
addopts =
    --ds=paranoid_model.tests.test_settings
    --no-migrations
    --cov=paranoid_model --no-cov-on-fail --cov-report=term-missing:skip-covered

# Tox configuration
[tox:tox]
minversion = 3.4.0
skipsdist = True
# List the environment that will be run by default
envlist =
  django{1.11,2.2,3.0,3.1}-py{36}
sitepackages=False

[testenv]
deps=
    -e{toxinidir}[test]
    django1.11: {[django]1.11}
    django2.2: {[django]2.2}
    django3.0: {[django]3.0}
    django3.1: {[django]3.1}

whitelist_externals =
    find
commands =
    find . -name "*.pyc" -delete
    pytest {posargs}

[django]
1.11 =
    Django>=1.11.0,<1.12.0
2.2 =
    Django>=2.2.0,<2.3.0
3.0 =
    Django>=3.0,<3.1
3.1 =
    Django>3.1,<4.0